fixed a bunch of layout bugs. Main landing is responsive

--- a/less/container.less
+++ b/less/container.less
@@ -5,7 +5,7 @@
   width: 100%;
   margin: 5rem auto 0 auto;
   padding: 4rem 0;
-  font-size: 3rem;
+
   .intro {
     display: flex;
     flex-direction: column;
@@ -33,6 +33,9 @@
       font-style: oblique;
       margin: 20px 0;
       color: black;
+      @media @phone{
+          font-size: 2.2rem;
+      }
     }
     
     .info-card {
@@ -57,7 +60,7 @@
       
       .text-content {
         width: 50%;
-        margin: 0 auto;
+        margin:  auto;
         padding: 3rem;
         @media @tablet{
             width: 100%;
@@ -65,13 +68,14 @@
         }
         p {
           line-height: 1.5;
+          font-size: 2rem;
         }
       }
       img {
         align-self: center;
         height: 300px;
         width: 300px;
-        margin: 0 auto;
+        margin: 3rem auto;
         @media @tablet {
             margin-bottom: 5rem;
         }
@@ -114,6 +118,12 @@
     align-items: center;
     
     .text-content {
+        h2{
+            font-size: 3rem;
+        }
+        p{
+            font-size: 2.5rem;
+        }
       
       padding: 50px;
     }
@@ -121,7 +131,7 @@
         background: @mainColor;
         color: @contrast2;
         padding: 2rem 4rem;
-        font-size: 2.5rem;
+        font-size: 2rem;
         width: 20%;
         align-self: center;
         margin-left: 20%;
@@ -137,12 +147,7 @@
   }
   footer{
       background: @mainColor;
-      @media @tablet {
-          font-size: 1.2rem;
-      }
-      @media @phone {
-          font-size: .8rem;
-      }
+      
   }
 }
 // -webkit-box-shadow: 0px 0px 292px -76px rgba(251,54,64,1);
