--- a/less/navigation.less
+++ b/less/navigation.less
@@ -19,20 +19,9 @@ header{
      
     }
 
-    img{
-        width: 55%;
-        height: 55%;
+    #logo{
         max-width: 198px;
         
-    }
-    .hamburger{
-        display: none;
-
-        @media @navBar {
-            display: flex;
-            width: 200px;
-            align-self: center;
-        }
     }
     nav{
         display: flex;
